signUp + apptBook + showPatients + deletePatients

--- a/client/pet-vet-frontend/src/assets/Card.css
+++ b/client/pet-vet-frontend/src/assets/Card.css
@@ -4,7 +4,7 @@
 	padding: 20px;
 	border-radius: 10px;
 	border: 0px;
-	border-color: tomato;
+	border-color: rgb(43, 82, 220);
 	border-style: solid;
 	transition: 200ms;
     max-width: 380px;
@@ -13,7 +13,7 @@
 .card:hover {
 	transition: 200ms;
 	border: 3px;
-	border-color: tomato;
+	border-color: rgb(43, 82, 220);
 	border-style: solid;
 }
 
